@@ -1,0 +1,78 @@
+// <copyright file="ObjCObjectFileCollection.cs" company="Mark Final">
+//  Opus package
+// </copyright>
+// <summary>C package</summary>
+// <author>Mark Final</author>
+namespace C.ObjC
+{
+    /// <summary>
+    /// ObjectiveC object file collection
+    /// </summary>
+    [Opus.Core.ModuleToolAssignment(typeof(IObjCCompilerTool))]
+    public class ObjectFileCollection : ObjectFileCollectionBase
+    {
+        public void Add(ObjectFile objectFile)
+        {
+            this.list.Add(objectFile);
+        }
+
+        public void Include(object owner, params string[] pathSegments)
+        {
+            Opus.Core.PackageInformation package = Opus.Core.PackageUtilities.GetOwningPackage(owner);
+            if (null == package)
+            {
+                throw new Opus.Core.Exception("Unable to locate package '{0}'", owner.GetType().Namespace);
+            }
+
+            string packagePath = package.Identifier.Path;
+            Opus.Core.ProxyModulePath proxyPath = (owner as Opus.Core.BaseModule).ProxyPath;
+            if (null != proxyPath)
+            {
+                packagePath = proxyPath.Combine(package.Identifier);
+            }
+
+            Opus.Core.StringArray filePaths = Opus.Core.File.GetFiles(packagePath, pathSegments);
+            foreach (string path in filePaths)
+            {
+                ObjectFile objectFile = new ObjectFile();
+                (objectFile as Opus.Core.BaseModule).ProxyPath = (this as Opus.Core.BaseModule).ProxyPath;
+                objectFile.SourceFile.SetAbsolutePath(path);
+                this.list.Add(objectFile);
+            }
+        }
+
+        public void Exclude(object owner, params string[] pathSegments)
+        {
+            Opus.Core.PackageInformation package = Opus.Core.PackageUtilities.GetOwningPackage(owner);
+            if (null == package)
+            {
+                throw new Opus.Core.Exception("Unable to locate package '{0}'", owner.GetType().Namespace);
+            }
+
+            string packagePath = package.Identifier.Path;
+            Opus.Core.ProxyModulePath proxyPath = (owner as Opus.Core.BaseModule).ProxyPath;
+            if (null != proxyPath)
+            {
+                packagePath = proxyPath.Combine(package.Identifier);
+            }
+
+            Opus.Core.StringArray filePaths = Opus.Core.File.GetFiles(packagePath, pathSegments);
+            System.Collections.Generic.List<ObjectFile> toRemove = new System.Collections.Generic.List<ObjectFile>();
+            foreach (string path in filePaths)
+            {
+                foreach (ObjectFile file in this.list)
+                {
+                    if (file.SourceFile.AbsolutePath == path)
+                    {
+                        toRemove.Add(file);
+                    }
+                }
+            }
+
+            foreach (ObjectFile file in toRemove)
+            {
+                this.list.Remove(file);
+            }
+        }
+    }
+}
