@@ -1,0 +1,15 @@
+// <copyright file="ObjCxxObjectFile.cs" company="Mark Final">
+//  Opus package
+// </copyright>
+// <summary>C package</summary>
+// <author>Mark Final</author>
+namespace C.ObjCxx
+{
+    /// <summary>
+    /// ObjectiveC++ object file
+    /// </summary>
+    [Opus.Core.ModuleToolAssignment(typeof(IObjCxxCompilerTool))]
+    public class ObjectFile : C.ObjectFile
+    {
+    }
+}
