@@ -53,6 +53,23 @@ cxxCompiler_options.extend(extra_args)
 (stdout,stderr) = ExecuteProcess(cxxCompiler_options, True, True)
 print stdout
 
+# ObjectiveC++ compiler options
+objCxxCompiler_options = [
+    opusCodeGeneratorExe,
+    "-i=" + os.path.relpath(os.path.join(opusPackageDir, "C", "dev", "Scripts", "ICxxCompilerOptions.cs")),
+    "-n=GccCommon",
+    "-c=ObjCxxCompilerOptionCollection",
+    "-p", # generate properties
+    "-d", # generate delegates
+    "-dd=" + os.path.relpath(os.path.join(opusPackageDir, "CommandLineProcessor", "dev", "Scripts", "CommandLineDelegate.cs")),
+    "-pv=PrivateData",
+    "-e", # this option set derives from the C option set
+    "-b" # used as a base class
+]
+objCxxCompiler_options.extend(extra_args)
+(stdout,stderr) = ExecuteProcess(objCxxCompiler_options, True, True)
+print stdout
+
 # Linker options
 linker_options = [
     opusCodeGeneratorExe,
