@@ -1,0 +1,23 @@
+// Automatically generated file from OpusOptionCodeGenerator. DO NOT EDIT.
+// Command line:
+// -i=../../../C/dev/Scripts/ICxxCompilerOptions.cs -n=GccCommon -c=ObjCxxCompilerOptionCollection -p -d -dd=../../../CommandLineProcessor/dev/Scripts/CommandLineDelegate.cs -pv=PrivateData -e -b
+namespace GccCommon
+{
+    public partial class ObjCxxCompilerOptionCollection
+    {
+        #region C.ICxxCompilerOptions Option properties
+        C.Cxx.EExceptionHandler C.ICxxCompilerOptions.ExceptionHandler
+        {
+            get
+            {
+                return this.GetValueTypeOption<C.Cxx.EExceptionHandler>("ExceptionHandler");
+            }
+            set
+            {
+                this.SetValueTypeOption<C.Cxx.EExceptionHandler>("ExceptionHandler", value);
+                this.ProcessNamedSetHandler("ExceptionHandlerSetHandler", this["ExceptionHandler"]);
+            }
+        }
+        #endregion
+    }
+}
